fix text align in hobbies

--- a/fun-finder-frontend/src/Components/ProfilePage/ProfileComponents/ProfileHobbies/ProfileHobbies.css
+++ b/fun-finder-frontend/src/Components/ProfilePage/ProfileComponents/ProfileHobbies/ProfileHobbies.css
@@ -54,6 +54,7 @@
   height: 100px;
   min-width: 150px;
   color: rgb(91, 0, 206);
+  white-space: nowrap;
 }
 .hobbies-second-row {
   padding: 20px;
